[gd_scene load_steps=5 format=2]

[ext_resource path="res://RootScenes/BaseViewports/BaseViewportsController.gd" type="Script" id=1]
[ext_resource path="res://RootScenes/Authentication/Authentication.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/UI.tscn" type="PackedScene" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends ViewportContainer


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="BaseViewports" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameViewport" type="Viewport" parent="GameViewportContainer"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3
physics_object_picking = true

[node name="Authentication" parent="GameViewportContainer/GameViewport" instance=ExtResource( 2 )]

[node name="UIViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05946
margin_right = 1.05945
mouse_filter = 2
stretch = true
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIViewport" type="Viewport" parent="UIViewportContainer"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="UI" parent="UIViewportContainer/UIViewport" instance=ExtResource( 3 )]
mouse_filter = 2
